# Package ######################################################################

[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "pid"
description = "Python wrapped CPP implementations of common control algorithms."
readme = "README.md"
requires-python = ">= 3.7, < 3.11"
authors = [{ name = "Jet", email = "taijunjet@hotmail.com" }]
license = { text = "MIT License" }
keywords = []
classifiers = [
    "Development Status :: 4 - Beta",  # change to `5 - Production/Stable` when ready
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
version="0.0.1"
dependencies = [
    "numpy"
]
